@@ -1,3 +1,7 @@
-# hachimi-crk
+# Hachimi Crk
+cloudbounce跑路一年了 我也销声匿迹一年了，我对不起你们，所以我公布了Hachimi crk
 Hachimi分为普通版和beta版 售卖价格分别是140r和1000r
-两个版本crk全部公开
+hachimi-1.4.5-crk.jar为普通版 hachimi-b4-crk.jar为1000r的beta版本
+在启动游戏前请加上java虚拟机参数：-Xverify:none 来关闭字节码验证
+不清楚hachimi原版是否有后门
+爱来自gpt6 Astra 花费了我足足12rmb才开裂出来的
